force-app/main/default/objects/Deposit_Account__x/Deposit_Account__x.object-meta.xml
<CustomObject>
    <description>Deposit accounts</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>DepositAccount</externalName>
    <label>Deposit Account</label>
    <pluralLabel>Deposit Accounts</pluralLabel>
</CustomObject>