force-app/main/default/objects/Deposit_Account__x/fields/ANZ_Plus_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Plus_Identifier__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>ANZ Plus Identifier</description>
    <externalDeveloperName>ANZPlusIdentifier</externalDeveloperName>
    <label>ANZ Plus Account</label>
    <type>Checkbox</type>
</CustomField>