force-app/main/default/objects/Deposit_Account__x/fields/ANZSIC_Code__c.field-meta.xml
<CustomField>
    <fullName>ANZSIC_Code__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Industry classification</description>
    <externalDeveloperName>ANZSICCode</externalDeveloperName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>