force-app/main/default/objects/Deposit_Account__x/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Balance</description>
    <externalDeveloperName>Balance</externalDeveloperName>
    <label>Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>