force-app/main/default/objects/Deposit_Account__x/fields/Balance_Available__c.field-meta.xml
<CustomField>
    <fullName>Balance_Available__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The funds available for the customer to use in monetary currency</description>
    <externalDeveloperName>BalanceAvailable</externalDeveloperName>
    <inlineHelpText>The funds available for the customer to use in monetary currency</inlineHelpText>
    <label>Balance Available ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>