force-app/main/default/objects/Deposit_Account__x/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Branch code</description>
    <externalDeveloperName>BSB</externalDeveloperName>
    <inlineHelpText>Branch code</inlineHelpText>
    <label>BSB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>