force-app/main/default/objects/Deposit_Account__x/fields/CCR__c.field-meta.xml
<CustomField>
    <fullName>CCR__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>CCR</description>
    <externalDeveloperName>CCR</externalDeveloperName>
    <label>CCR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>