force-app/main/default/objects/Deposit_Account__x/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Controlling post ID</description>
    <externalDeveloperName>CPID</externalDeveloperName>
    <label>CPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>