force-app/main/default/objects/Deposit_Account__x/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Date the limit expires</description>
    <externalDeveloperName>ExpiryDate</externalDeveloperName>
    <label>Limit Expiry Date</label>
    <type>DateTime</type>
</CustomField>