force-app/main/default/objects/Deposit_Account__x/fields/Fluctuating_Seasonal_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Fluctuating_Seasonal_Expiry_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>The end date of a calendar year a given limit applies</description>
    <externalDeveloperName>FluctuatingSeasonalExpiryDate</externalDeveloperName>
    <label>Fluctuating/Seasonal Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>