force-app/main/default/objects/Deposit_Account__x/fields/Fluctuating_Seasonal_Limit_2__c.field-meta.xml
<CustomField>
    <fullName>Fluctuating_Seasonal_Limit_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Limit 2 ($)</description>
    <label>Limit 2 ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>