force-app/main/default/objects/Deposit_Account__x/fields/Fluctuating_Seasonal_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fluctuating_Seasonal_Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>The limit for a fluctuating/seasonal limit arrangement type for a given time period (within a single calendar year)</description>
    <externalDeveloperName>FluctuatingSeasonalLimit</externalDeveloperName>
    <label>Fluctuating/Seasonal Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>