force-app/main/default/objects/Deposit_Account__x/fields/Fluctuating_Seasonal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fluctuating_Seasonal_Start_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>The start date of a calendar year a given limit applies</description>
    <externalDeveloperName>FluctuatingSeasonalStartDate</externalDeveloperName>
    <label>Fluctuating/Seasonal Start Date</label>
    <type>DateTime</type>
</CustomField>