force-app/main/default/objects/Deposit_Account__x/fields/Fluctuating_Seasonal_Start_Expiry_Limit1__c.field-meta.xml
<CustomField>
    <fullName>Fluctuating_Seasonal_Start_Expiry_Limit1__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Limit 1 Start/Expiry</description>
    <label>Limit 1 Start/Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>