force-app/main/default/objects/Deposit_Account__x/fields/Fluctuating_Seasonal_Start_Expiry_Limit2__c.field-meta.xml
<CustomField>
    <fullName>Fluctuating_Seasonal_Start_Expiry_Limit2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Limit 2 Start/Expiry</description>
    <label>Limit 2 Start/Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>