force-app/main/default/objects/Deposit_Account__x/fields/Hard_Hold__c.field-meta.xml
<CustomField>
    <fullName>Hard_Hold__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Whether or not a Hard Hold is loaded on CAP</description>
    <externalDeveloperName>HardHold</externalDeveloperName>
    <label>Hard Hold</label>
    <type>Checkbox</type>
</CustomField>