force-app/main/default/objects/Deposit_Account__x/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Interest Rate</description>
    <externalDeveloperName>InterestRate</externalDeveloperName>
    <label>Debit Interest Rate (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>