force-app/main/default/objects/Deposit_Account__x/fields/Linked_Loan_Offsets__c.field-meta.xml
<CustomField>
    <fullName>Linked_Loan_Offsets__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Linked Loan (Offsets)</description>
    <externalDeveloperName>LinkedLoanOffsets</externalDeveloperName>
    <label>Linked Loan (Offset)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>