force-app/main/default/objects/Deposit_Account__x/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Margin applied on base rate interest</description>
    <externalDeveloperName>Margin</externalDeveloperName>
    <label>Debt Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>