force-app/main/default/objects/Deposit_Account__x/fields/Number_of_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Signatures__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Number of Signatures</description>
    <externalDeveloperName>NumberOfSignatures</externalDeveloperName>
    <label>Number of Signatures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>