force-app/main/default/objects/Deposit_Account__x/fields/OD_Service_Charge_Waive_Expiry__c.field-meta.xml
<CustomField>
    <fullName>OD_Service_Charge_Waive_Expiry__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>OD Service Charge Waive Expiry</description>
    <externalDeveloperName>ODServiceChargeWaiveExpiry</externalDeveloperName>
    <label>OD Service Charge Waive Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>