force-app/main/default/objects/Deposit_Account__x/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The date and time when the account record was created</description>
    <externalDeveloperName>OpenedDate</externalDeveloperName>
    <inlineHelpText>Date the account was opened</inlineHelpText>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>