force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Expiry date of limit</description>
    <externalDeveloperName>OverdraftExpiryDate</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>