force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Interest_Rate__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Interest rate of temporary overdraft limit facility</description>
    <externalDeveloperName>OverdraftInterestRate</externalDeveloperName>
    <label>Interest Rate (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>