force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_Interest_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Interest_Repayment_Frequency__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>How often debit interest is charged</description>
    <externalDeveloperName>OverdraftLimitInterestRepaymentFrequency</externalDeveloperName>
    <label>Interest Repayment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>