force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_Limit__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>The &apos;documented&apos; Limit on the facility</description>
    <externalDeveloperName>OverdraftLimit</externalDeveloperName>
    <label>Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>