force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_Margin__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Margin__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Margin of Temp OD</description>
    <externalDeveloperName>OverdraftMargin</externalDeveloperName>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>