force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_Reference_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Reference_Index_Rate__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Index rate of temp OD</description>
    <externalDeveloperName>OverdraftReferenceIndexRate</externalDeveloperName>
    <label>Reference Index Rate(%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>