force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_SAO__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_SAO__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Broker code. Unique identifier of a loan broker</description>
    <externalDeveloperName>OverdraftSAO</externalDeveloperName>
    <label>SAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>