force-app/main/default/objects/Deposit_Account__x/fields/Overdraft_TPMI__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_TPMI__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Broker Code. Unique identifier of a loan broker</description>
    <externalDeveloperName>OverdraftTPMI</externalDeveloperName>
    <label>TPMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>