force-app/main/default/objects/Deposit_Account__x/fields/Pledge__c.field-meta.xml
<CustomField>
    <fullName>Pledge__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Pledge</description>
    <externalDeveloperName>Pledge</externalDeveloperName>
    <label>Pledge</label>
    <type>Checkbox</type>
</CustomField>