force-app/main/default/objects/Deposit_Account__x/fields/Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>$ amount of a pledge against an account</description>
    <externalDeveloperName>PledgeAmount</externalDeveloperName>
    <label>Pledge Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>