force-app/main/default/objects/Deposit_Account__x/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>The ANZ product code</description>
    <externalDeveloperName>ProductCode</externalDeveloperName>
    <inlineHelpText>The ANZ product code</inlineHelpText>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>