force-app/main/default/objects/Deposit_Account__x/fields/Reference_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reference_Index_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>BMI or Retail Index etc. Will include both the Value and the percentage, for example &apos;BMI - 6.12%&apos;</description>
    <externalDeveloperName>ReferenceIndexRate</externalDeveloperName>
    <label>Debit Reference Index Rate (%)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>