force-app/main/default/objects/Deposit_Account__x/fields/Reference_Index_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Index_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The index type which will be the base interest rate (reference index rate)</description>
    <externalDeveloperName>ReferenceIndexType</externalDeveloperName>
    <label>Debit Reference Index Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>