force-app/main/default/objects/Deposit_Account__x/fields/Regulated_Account__c.field-meta.xml
<CustomField>
    <fullName>Regulated_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Regulated Account</description>
    <externalDeveloperName>RegulatedAccount</externalDeveloperName>
    <label>Regulated Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>