force-app/main/default/objects/Deposit_Account__x/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Customer to financial account relationship</description>
    <externalDeveloperName>Relationship</externalDeveloperName>
    <inlineHelpText>Customer account relationship</inlineHelpText>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>