force-app/main/default/objects/Deposit_Account__x/fields/Service_Charge_Waive_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Waive_Expiry__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Service Charge Waive Expiry</description>
    <externalDeveloperName>ServiceChargeWaiveExpiry</externalDeveloperName>
    <label>Service Charge Waive Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>