force-app/main/default/objects/Deposit_Account__x/fields/Source_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Source System Status</description>
    <externalDeveloperName>SourceSystemStatus</externalDeveloperName>
    <label>Source System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>