force-app/main/default/objects/Deposit_Account__x/fields/Stop_Pay_Number__c.field-meta.xml
<CustomField>
    <fullName>Stop_Pay_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Number of Stop Pay Restraint</description>
    <externalDeveloperName>StopPayNumber</externalDeveloperName>
    <inlineHelpText>Number of Stop Pay Restraint</inlineHelpText>
    <label>Stop Pay Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>