force-app/main/default/objects/Deposit_Account__x/fields/TPMI_SAO__c.field-meta.xml
<CustomField>
    <fullName>TPMI_SAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>TPMI-SAO</description>
    <externalDeveloperName>TPMISAO</externalDeveloperName>
    <label>TPMI-SAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>